# AgMo-mono

./: .eslintrc.js  README.md  create_admin.py  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  Dockerfile  README.md  check_tables.py  create_simple_user.py  create_user.py  debug_db.py  list_users.py  pyproject.toml  requirements.txt  simple_test.py  test_db.py  test_login.py  test_registration.py
backend/agmo/: __init__.py  main.py
backend/agmo/api/: admin.py  auth.py  chat.py  disease_detection.py  farms.py  learning.py  monitoring.py  routes.py  weather.py
backend/agmo/core/: auth.py  config.py  database.py
backend/agmo/models/: __init__.py  analytics.py  chat.py  farm.py  learning.py  monitoring.py  user.py
backend/agmo/rl/: environment.py  trainer.py
backend/agmo/services/: enhanced_weather_service.py  fallback_weather_service.py  weather_service.py
backend/agmo/vision/: cnn_model.py
backend/agmo/websocket/: client.py  cnn_handler.py
backend/logs/: training_log.monitor.csv
backend/models/: maize_cnn.py  model.ipynb  plant_cnn.py
backend/tests/: cnn_server.py  conftest.py  start_cnn_server.py  test_api.py  test_cnn.py  test_disease_detection.py  test_maize_cnn.py  test_plant_cnn.py  test_rl.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/e2e/: simulation.spec.ts
frontend/src/: App.tsx  index.css
simulation/: .env.example  Dockerfile  README.md  env.example  package-lock.json  package.json  tsconfig.json
simulation/src/: server.ts
(+37 files in other folders)
