[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agmo-backend"
version = "1.0.0"
description = "Reinforcement learning backend for drone simulation"
authors = [{name = "AGMO Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "numpy>=1.24.3",
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "opencv-python>=4.8.1.78",
    "pillow>=10.1.0",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.2.1",
    "tensorboard>=2.15.1",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agmo*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true